# sbv3-function-example

./: Cargo.toml  Dockerfile  Dockerfile.app  Dockerfile.builder  Dockerfile.function  README.md  build.sh
configs/: app.manifest.template  boot.sh  get_measurement.sh
scripts/: sgx_init_machine.sh
src/: ipfs.rs  main.rs
src/sdk/: anchor.rs  decimal.rs  error.rs  function.rs  instruction.rs  mod.rs  queue.rs  quote.rs  sgx.rs
