[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-client = "0.27.0"
futures = "0.3"
getrandom = "0.2.8"
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }
ipfs-api-backend-hyper = "0.6"
serde = "1.0.160"
serde_json = "1.0.96"
sgx-quote = "0.1.0"
sgx_types = "1.1.2"
solana-sdk = "1.15.2"
tokio = "1.26.0"
sha2 = "0.10.6"
bincode = "1.3.3"
hex = "0.4.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

