[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-client = "0.27.0"
futures = "0.3"
getrandom = "0.2.8"
serde = "1.0.160"
serde_json = "1.0.96"
sgx-quote = "0.1.0"
solana-sdk = "1.14.18"
tokio = "1.26.0"
sha2 = "0.10.6"
bincode = "1.3.3"
hex = { version = "0.4.3", features = ["serde"] }
spl-token = "3.5.0"
bytemuck = "1.13.1"
anchor-lang = "0.27.0"
chrono = "0.4.25"
cron = "0.12.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

